@@ -1,0 +1,22 @@
+#!/bin/sh
+set -e
+
+##
+# variables
+localbase=${LOCALBASE:-$(realpath "$(dirname "$0")"/../../../..)}
+libexec="${localbase}"/libexec/portzap
+gitdir=$1
+installdir=$2
+rev=$3
+
+##
+# main
+cd "${gitdir}"
+files=$("${libexec}"/utils/git/get-removed-files "${gitdir}" "${rev}")
+for file in ${files}; do
+    target="${installdir}"/"${file}"
+    parent=$(dirname "${target}")
+    echo "rm ${target}"
+    rm -f "${target}"
+    find "${parent}" -type d -maxdepth 0 -empty -delete
+done
